--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,16 +9,17 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+
     services:
       mongo:
         image: mongo:5.0
         ports:
           - 27017:27017
         options: >-
-          --health-cmd "mongo --eval 'db.runCommand({ ping: 1 })'"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+          --health-cmd="mongo --eval 'db.runCommand({ ping: 1 })'"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
       - name: Checkout repository
@@ -46,6 +47,4 @@ jobs:
         env:
           MONGO_URI: mongodb://localhost:27017/testdb
         run: |
-          # Replace below with your actual test command
           pytest
-
